--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
     
 
     <br>
-    <div class="footer">
+    <div class="footer" id="footer">
       <p>CopyRight@Hustle</p>
       <p>2023</p>
       <p>All Right Reserved</p>
